--- a/home/contact_us.html
+++ b/home/contact_us.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html>
     <body>
-        <h2>Contact Us</h2>
-        <form method="POST">
-            {% csrf_token %}
-            {{form.as_p}}
-            <button type="submit">Submit</button>
-        </form>
+        <h2>Our Restaurant Location</h2>
+        <p>Kukatpalli Main Street,Hyderabad,India</p>
+        <iframe>
+            src=""
+            width="600"
+            height="450"
+            allowfullscreen=""
+            loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade">
+        </iframe>
     </body>
 </html>
