--- a/home/contact_us.html
+++ b/home/contact_us.html
@@ -3,6 +3,7 @@
     <body>
         <h2>Contact Us</h2>
         <form method="POST">
+            {% csrf_token %}
             {{form.as_p}}
             <button type="submit">Submit</button>
         </form>
