--- a/home.html
+++ b/home.html
@@ -1,4 +1,8 @@
 <!DOCTYPE html>
 <html>
     <body>
-        <h1>Welcome to {{restaurant}}<h1>
+        <h1>Welcome to Tasty Bites<h1>
+        <p>We are glad to serve you delicious food!</p>
+    </body>
+</html>
+    
