--- a/home.html
+++ b/home.html
@@ -1,8 +1,23 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width,initial-scale=1.0">
+        <title>Tasty Bites-Home</title>
+        <link rel="stylesheet" href="style.css">
+    </head>
     <body>
         <h1>Welcome to Tasty Bites<h1>
-        <p>We are glad to serve you delicious food!</p>
+        <nav>
+            <a href="HTML home.html">Home</a>
+            <a href="HTML menu.html">Menu</a>
+            <a href="HTML contact_us.html">Contact</a>
+        </nav>
+        <main>
+            <h2>Delicious food Awaits!</h2>
+            <p>We are glad to serve you delicious food!</p>
+            <button>Order Now</button>
+        </main>
     </body>
 </html>
     
