--- a/account/404.html
+++ b/account/404.html
@@ -25,7 +25,7 @@
 </head>
 <body>
     <h1>404</h1>
-    <p>Oops!The page you looking for doesnot exist</p>
+    <p>Oops!The page you are looking for does not exist.</p>
     <p><a href="/">Go Back Home</a></p>
 </body>
 </html>
