--- a/home.html
+++ b/home.html
@@ -1,23 +1,17 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width,initial-scale=1.0">
-        <title>Tasty Bites-Home</title>
-        <link rel="stylesheet" href="style.css">
-    </head>
-    <body>
-        <h1>Welcome to Tasty Bites<h1>
-        <nav>
-            <a href="HTML home.html">Home</a>
-            <a href="HTML menu.html">Menu</a>
-            <a href="HTML contact_us.html">Contact</a>
-        </nav>
-        <main>
-            <h2>Delicious food Awaits!</h2>
-            <p>We are glad to serve you delicious food!</p>
-            <button>Order Now</button>
-        </main>
-    </body>
+<head>
+    <meta charset="UTF-8">
+    <title>Home-Tasty Bites</title>
+</head>
+<body style="font-family:Arial,sans-serif;margin:0;padding:0;background-color:#f8f9fa;">
+    <div style="background-color:#ff4d4d;padding:20px;color:white;"
+        <h1 style="margin:0;font-size:40px;">Welcome to Tasty Bites<h1>
+    </div>
+    <div style="text-align:center;padding:50px;">
+        <p style="font-size:20px;color:#555">We are glad to serve you delicious food!</p>
+        <a href="/contact/" style="display:inline-block;">Contact Us</a>
+    </div>
+</body>
 </html>
     
