--- a/home.html
+++ b/home.html
@@ -2,10 +2,10 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Home-Tasty Bites</title>
+    <title>Home - Tasty Bites</title>
 </head>
 <body style="font-family:Arial,sans-serif;margin:0;padding:0;background-color:#f8f9fa;">
-    <div style="background-color:#ff4d4d;padding:20px;color:white;"
+    <div style="background-color:#ff4d4d;padding:20px;color:white;">
         <h1 style="margin:0;font-size:40px;">Welcome to Tasty Bites<h1>
     </div>
     <div style="text-align:center;padding:50px;">
