--- a/home.html
+++ b/home.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Home - Tasty Bites</title>
+    <title>About Us - Tasty Bites</title>
 </head>
 <body style="font-family:Arial,sans-serif;margin:0;padding:0;background-color:#f8f9fa;">
     <div style="background-color:#ff4d4d;padding:20px;color:white;">
@@ -10,7 +10,8 @@
     </div>
     <div style="text-align:center;padding:50px;">
         <p style="font-size:20px;color:#555">We are glad to serve you delicious food!</p>
-        <a href="/contact/" style="display:inline-block;">Contact Us</a>
+        <a href="contact.html" style="display:inline-block;">Contact Us</a>
+        <a href="about.html" style="display:inline-block;">About Us</a>
     </div>
 </body>
 </html>
