--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
 </head>
 <body style="font-family:Arial,sans-serif;margin:0;padding:0;background-color:#f8f9fa;">
     <div style="background-color:#ff4d4d;padding:20px;color:white;">
-        <h1 style="margin:0;font-size:40px;">Welcome to Tasty Bites</h1>
+        <h1 style="margin:0;font-size:40px;">Welcome to {{restuarant}}</h1>
     </div>
     <div style="text-align:center;padding:50px;">
         <p style="font-size:20px;color:#555">We are glad to serve you delicious food!</p>
