--- a/home.html
+++ b/home.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>About Us - Tasty Bites</title>
+    <title>Welcome to Tasty Bites</title>
 </head>
 <body style="font-family:Arial,sans-serif;margin:0;padding:0;background-color:#f8f9fa;">
     <div style="background-color:#ff4d4d;padding:20px;color:white;">
