--- a/home.html
+++ b/home.html
@@ -10,6 +10,7 @@
     </div>
     <div style="text-align:center;padding:50px;">
         <p style="font-size:20px;color:#555">We are glad to serve you delicious food!</p>
+        <p><strong>Call us:</strong>{{phone_number}}</p>
         <a href="contact.html" style="display:inline-block;">Contact Us</a>
         <a href="about.html" style="display:inline-block;">About Us</a>
     </div>
