--- a/reservations.html
+++ b/reservations.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Reservations|{{restaurant_name}}</title>
-        <link href="https://codn.jsdelicr.net/npm/booststraps@5.3.0/dist/css/booststrap.min.css" rel="stylesheet">
+        <link href="https://cdn.jsdelivr.net/npm/booststrap@5.3.0/dist/css/booststrap.min.css" rel="stylesheet">
     </head>
     <body class="bg.light text-dark">
         <div class="container text-center py-5">
