--- a/home.html
+++ b/home.html
@@ -8,14 +8,16 @@
     <div style="background-color:#ff4d4d;padding:20px;color:white;">
         <h1 style="margin:0;font-size:40px;">Welcome to {{restaurant}}</h1>
     </div>
-    <footer class="bg-dark text-white text-center py-3 mt-5">
-        <p class="mb-0"
     <div style="text-align:center;padding:50px;">
         <p style="font-size:20px;color:#555">We are glad to serve you delicious food!</p>
         <p><strong>Call us:</strong>{{phone_number}}</p>
         <a href="contact.html" style="display:inline-block;">Contact Us</a>
         <a href="about.html" style="display:inline-block;">About Us</a>
     </div>
+    <footer class="bg-dark text-white text-center py-3 mt-5">
+        <p class="mb-0">{{year}} {{restaurant_name}}.All Rights Reserved.</p>
+        <p>If any quieries contact us {phone_number}</p>
+    </footer>
 </body>
 </html>
     
