--- a/reservations.html
+++ b/reservations.html
@@ -15,5 +15,9 @@
             <a href="{% url 'account/home.html'%}" class="btn btn-outline-secondary mt-code">
                 backtohome</a>
         </div>
+        <footer class="bg-dark text-white text-center py-3 mt-5">
+            <p class="mb-0">{{year}} {{restaurant_name}}.All Rights Reserved.</p>
+            <p> If any quieries contact us {{phone_number}}</p>
+        </footer>
     </body>
 </html>
