--- a/home/contact_us.html
+++ b/home/contact_us.html
@@ -7,5 +7,9 @@
             {{form.as_p}}
             <button type="submit">Submit</button>
         </form>
+        <footer class="bg-dark text-white text-center py-3 mt-5">
+            <p class="mb-0">{{year}} {{restaurant_name}}.All Rights are reserved</p>
+            <p> If any quiries Contact us {{phone_number}}</p>
+        </footer>
     </body>
 </html>
