--- a/home.html
+++ b/home.html
@@ -3,6 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <title>Welcome to Tasty Bites</title>
+    <style>
+        body {
+        font-family:Arial,sans-serif;
+        margin:0;
+        padding:0;
+        background-color:#f8f9fa;
+        color:#333;
+        }
+        header {
+        background-color:#ff4d4d;
+        padding:20px;
+        color:white;
+        text-align:center;
+        }
+        header h1{
+        margin:0;
+        font-size:36px;
+        }
+        . content{
+        text-align:center;
+        padding:40px 20px;
+        }
+        a:hover{
+        background-color:#e60000;
+        }
 </head>
 <body style="font-family:Arial,sans-serif;margin:0;padding:0;background-color:#f8f9fa;">
     <div style="background-color:#ff4d4d;padding:20px;color:white;">
