--- a/home.html
+++ b/home.html
@@ -30,7 +30,11 @@
         }
 </head>
 <body style="font-family:Arial,sans-serif;margin:0;padding:0;background-color:#f8f9fa;">
+<header>
+    <img src="logo.png" alt="{{restaurant}} Logo">
+</header>
     <div style="background-color:#ff4d4d;padding:20px;color:white;">
+
         <h1 style="margin:0;font-size:40px;">Welcome to {{restaurant}}</h1>
     </div>
     <div style="text-align:center;padding:50px;">
